--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
